--- a/css/newtab.css
+++ b/css/newtab.css
@@ -2,6 +2,8 @@ html, body{
 	min-height: 100vh;
 }
 body { 
+	min-height: 350px;
+	min-width: 640px;
     /*background: white url("img_tree.gif") no-repeat fixed center; */
 	background: url() no-repeat center center fixed; 
 	-webkit-background-size: cover;
