--- a/css/newtab.css
+++ b/css/newtab.css
@@ -42,7 +42,7 @@ li label{
 	cursor: pointer;
 }
 li.not-completed{
-	padding-left: 15px;
+	padding-left: 20px;
 	/*transition: .24s ease-out;*/
 }
 li:not(.input):hover .task-options{
@@ -51,44 +51,40 @@ li:not(.input):hover .task-options{
 li.not-completed:hover{
 	/*padding-left: 49px;*/
 }
-li.not-completed:hover .task-mark{
-	/*width: 39px;*/
-}
+
 li.completed{
 	opacity: .5;
 	text-decoration: line-through;
 }
 .task-mark{
-	border-left: 5px solid red;
-	transition: .24s ease-out;
-	width: 5px;
 	height: 100%;
 	display: inline-block;
 	position: absolute;
 	left: 0;
 	top: 0;
-	overflow: hidden;
-	background-color: #f8f8f8;
 	margin-right: 34px;
-}
-.task-mark img{
-	cursor: pointer;
-	opacity: 1;
 	width: 20px;
-	min-width: 20px;
-	height: 20px;
-	margin: 10px 9px;
+}
+.task-mark svg{
+	position: relative;
+	bottom: -8px;
+}
+.tasks-tab ul li .task-mark{
+	visibility: hidden;
+	transition: none;
+}
+.tasks-tab ul li:hover .task-mark{
+	visibility: visible;
 }
 .task-options{
 	display: none;
 	float: right;
 	height: 100%;
-	margin-right: -25px;
+	margin-right: 10px;
 }
 .task-options img{
 	height: 15px;
 	opacity: .7;
-	margin-left: 10px;
 	cursor: pointer;
 }
 .removTask{
@@ -99,25 +95,31 @@ li.input{
 	padding: 0;
 	border-color: #f1f1f1 !important;
 }
+.tasks-tab li .uk-checkbox{
+	margin-right: 13px;
+}
 li input{
 	box-sizing: border-box;
-	padding: 10px;
 	border-width: 0;
 	width: 100%;
+	width: calc(100% - 100px);
 	height: 100%;
 	outline: none;
 }
-li input:focus + img{
+li.input input:focus + a{
 	opacity: .5;
 }
-li.input img{
+li input.ng-pristine123{
+	padding: 10px;
+}
+li.input a{
 	opacity: 0;
 	position: absolute;
 	right: 14px;
 	top: 8px;
 	height: 20px;
 }
-li.input img:hover{
+li.input a:hover{
 	opacity: 1;
 	cursor: pointer;
 }
